Update DossierService.java